fixed x-axis overflow
textarea's width was 100% and padding 10%, so in total it's width was 110% which was longer than the container's 100% size

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@
 body {
   margin: 0;
   font-family: "Poppins";
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 :root {
   --yellow: rgb(237, 187, 0);
@@ -184,8 +184,8 @@ div.invisible-line{
 }
 .notepad{
   height: 100vh;
-  width: 100%;
-  margin: 20px;
+  width: 94%;
+  padding: 3%;
 }
 textarea{
   all: unset;
